test/haskell2010/conformance/negative/malformed-where-layout.hs
module Main where

main = f True
  where
    f True = 1
   f False = 0
